$Id$

2.1.11-pre-1
	Don't crash doing zlocate with bad tickets. [BZ 12]
	Metion the path for the owlconf in intro.txt [BZ 54]
	Print Better error message if startup fails due to unreadable
	   .owlconf [BZ 57]

2.1.10
	Fix a new problem finding libdes425
	Don't crash on very long hostnames [BZ 52]
	In 'sub' command, create .zephyr.subs if it doesn't exist [BZ 15]
	A fix for certain resize crashes (partly from alexmv) [BZ 55]
	Turn off ISTRIP (gildea)
	
2.1.9
	Include /usr/include/kerberosIV if it's found
	
2.1.8
	Do OLC formatting for anything coming from olc.matisse
	Improvements to popup size algorithm (from gildea)
	Improved 'show colors' with non-colored labels
	
2.1.7
	The colorclass command is added, to make colorization easy
	Handle MIT Athena OLC zephyrs correctly
	Updated ktools website / bug address
	Do ntohs() when printing zephyr port in zephyr info
	Updated man page
	
2.1.6
        Fixed three bugs found by Valgrind.
        Fixed a case where doing "aim addbuddy" instead of "addbuddy aim"
	  would cause a segfault.
	pexec will now incrimentally display data as it is output
	  by the child process.  Additionally, commands running under
	  pexec may now be killed by quitting out of the popless window.
	Added muxevents select loop dispatcher.  File descriptors may
	  be registered with muxevents and handlers will be dispatched
	  to when data is available for non-blocking read/write/except.
	Switched the stderr_redir stuff to use muxevents.
	Print C-\ correctly (from gildea)
	Dropped first brace in muxevents functions for consistency
	Catch SIGHUP and SIGTERM and do a proper logout
	
2.1.5
	Added a licence
	The 'personalbell' variable can now be set to 'on' 'off' or
	  the name of a filter to match against
	The 'loglogins' variable now controls whether login/logout
	  messages are logged.  It is off by default.  For now this
	  affects only AIM messages, later zephyr login/logout messages
	  will also be logged if this is set to 'on'